<resources>
    <string name="app_name">ButterPOSv2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Settings</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="language_title">Language</string>
    <string name="payment_title">Payment Method</string>
    <string name="notifications_title">Notifications</string>
    <string name="feedback_title">Feedback</string>
    <string name="settings_icon_description">Settings</string>

    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
        <!-- Add more languages here -->
    </string-array>
    <string-array name="payment_methods">
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>PayPal</item>
        <item>Apple Pay</item>
        <!-- Add more payment methods here -->
    </string-array>
</resources>